fix: footer spacing

--- a/src/style.css
+++ b/src/style.css
@@ -258,6 +258,7 @@ button {
 	display: flex;
 	flex-direction: column;
 	gap: 0.6em;
+	padding: 0 2rem;
 }
 
 .loader {
